# ttt-bench

./: .gitignore  LICENSE  README.md  benchmark.sh  build.sh  clean.sh  format-times.sh  get-times.sh  get-versions.sh  install-languages.sh  times.md  times.sh  times.txt  versions.txt
c/: .gitignore  Makefile  build.sh  clean.sh  gamevalue.c  negamax.c  ttt.c
cobol/: Makefile  gamevalue.cbl  negamax.cbl  state.cpy  ttt.cbl
erlang/: .gitignore  Makefile  board.erl  build.sh  clean.sh  gamevalue.erl  negamax.erl  test.erl  ttt.erl  ttt.sh
go/: .gitignore
go/src/: go.mod  main.go  ttt.go
go/src/gamevalue/: gamevalue.go
go/src/negamax/: negamax.go
haskell/: .gitignore  Negamax.hs  Result.hs  TTT.hs  build.sh  clean.sh  ttt.cabal
haskell/bobw/: GameValue.hs  Main.hs  Negamax.hs  ttt.cabal
haskell/functional/: GameValue.hs  Main.hs  Negamax.hs  ttt.cabal
haskell/imperative/: GameValue.hs  Negamax.hs  ttt  ttt.cabal
java/: Gamevalue.java  Negamax.java  TTT.java  build.sh  clean.sh  get-java-versions.sh  run.sh
javascript/: gamevalue.js  negamax.js  run.sh  ttt.js
matlab/: negamax.m  ttt.m
nickle/: gamevalue.5c  negamax.5c  ttt.5c
octave/: .gitignore  gamevalue.m  negamax.m  ttt.m
php/: gamevalue.php  negamax.php  ttt.php
python/: .gitignore  build.sh  clean.sh  gamevalue.py  negamax.py  ttt.py
rust/: Cargo.toml
rust/cargo/: config
rust/src/: gamevalue.rs  lib.rs  negamax.rs  ttt.rs
