[package]
name = "ttt"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
ndarray = "*"

[lib]
name = "ttt"
path = "src/lib.rs"

[[bin]]
name = "ttt"
path = "src/ttt.rs"

